@@ -36,11 +36,18 @@ import org.apache.lucene.util.Constants;
 
 public class TestDocIdsWriter extends LuceneTestCase {
 
+  private static final int[] VERSIONS =
+      new int[] {BKDWriter.VERSION_META_FILE, BKDWriter.VERSION_CURRENT};
+
   public void testRandom() throws Exception {
     int numIters = atLeast(100);
     try (Directory dir = newDirectory()) {
       for (int iter = 0; iter < numIters; ++iter) {
-        int[] docIDs = new int[1 + random().nextInt(5000)];
+        int count =
+            random().nextBoolean()
+                ? 1 + random().nextInt(5000)
+                : BKDConfig.DEFAULT_MAX_POINTS_IN_LEAF_NODE;
+        int[] docIDs = new int[count];
         final int bpv = TestUtil.nextInt(random(), 1, 32);
         for (int i = 0; i < docIDs.length; ++i) {
           docIDs[i] = TestUtil.nextInt(random(), 0, (1 << bpv) - 1);
@@ -69,7 +76,11 @@ public class TestDocIdsWriter extends LuceneTestCase {
     int numIters = atLeast(100);
     try (Directory dir = newDirectory()) {
       for (int iter = 0; iter < numIters; ++iter) {
-        int[] docIDs = new int[1 + random().nextInt(5000)];
+        int count =
+            random().nextBoolean()
+                ? 1 + random().nextInt(5000)
+                : BKDConfig.DEFAULT_MAX_POINTS_IN_LEAF_NODE;
+        int[] docIDs = new int[count];
         int min = random().nextInt(1000);
         final int bpv = TestUtil.nextInt(random(), 1, 16);
         for (int i = 0; i < docIDs.length; ++i) {
@@ -113,7 +124,9 @@ public class TestDocIdsWriter extends LuceneTestCase {
 
   private void test(Directory dir, int[] ints) throws Exception {
     final long len;
-    DocIdsWriter docIdsWriter = new DocIdsWriter(ints.length);
+    // It is hard to get BPV24-encoded docs in TextLuceneXXPointsFormat, test bwc here as well.
+    final int version = VERSIONS[random().nextInt(VERSIONS.length)];
+    DocIdsWriter docIdsWriter = new DocIdsWriter(ints.length, version);
     try (IndexOutput out = dir.createOutput("tmp", IOContext.DEFAULT)) {
       docIdsWriter.writeDocIds(ints, 0, ints.length, out);
       len = out.getFilePointer();
@@ -149,7 +162,8 @@ public class TestDocIdsWriter extends LuceneTestCase {
             public Relation compare(byte[] minPackedValue, byte[] maxPackedValue) {
               throw new UnsupportedOperationException();
             }
-          });
+          },
+          new int[ints.length]);
       assertArrayEquals(ints, read);
       assertEquals(len, in.getFilePointer());
     }
